unpackaged/main/default/objects/Custom_Report_Record_Type__mdt/Custom_Report_Record_Type__mdt.object-meta.xml
<CustomObject>
    <label>Custom Report Record Type</label>
    <pluralLabel>Custom Report Record Types</pluralLabel>
</CustomObject>