unpackaged/main/default/objects/Custom_Report_Record_Type__mdt/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <length>64</length>
    <type>Text</type>
</CustomField>