unpackaged/main/default/objects/Custom_Report_Record_Type__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>