unpackaged/main/default/objects/Custom_Report_Record_Type__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>8</length>
    <type>Text</type>
</CustomField>